--- a/math/post_approx_with_GP_emulators.bib
+++ b/math/post_approx_with_GP_emulators.bib
@@ -150,16 +150,6 @@ journal = {Bayesian Analysis},
 doi = {10.1214/09-BA404}
 }
 
-@book{gramacy2020surrogates,
-  title = {Surrogates: {G}aussian Process Modeling, Design and \
-    Optimization for the Applied Sciences},
-  author = {Robert B. Gramacy},
-  publisher = {Chapman Hall/CRC},
-  address = {Boca Raton, Florida},
-  note = {\url{http://bobby.gramacy.com/surrogates/}},
-  year = {2020}
-}
-
 @article{design_analysis_computer_experiments,
 author = {Jerome Sacks and William J. Welch and Toby J. Mitchell and Henry P. Wynn},
 title = {{Design and Analysis of Computer Experiments}},
@@ -865,7 +855,14 @@ eprint = {
 % Ecological Applications
 %  ---------------------------------------------------------------------------------------------------
 
-@Manual{vsem,    title = {BayesianTools: General-Purpose MCMC and SMC Samplers and Tools for BayesianStatistics},    author = {Florian Hartig and Francesco Minunno and Stefan { Paul}},    year = {2023},    note = {R package version 0.1.8},    url = {https://CRAN.R-project.org/package=BayesianTools},  }
+@Manual{vsem,
+    title = {BayesianTools: General-Purpose MCMC and SMC Samplers and Tools for Bayesian
+Statistics},
+    author = {Florian Hartig and Francesco Minunno and Stefan { Paul}},
+    year = {2023},
+    note = {R package version 0.1.8},
+    url = {https://CRAN.R-project.org/package=BayesianTools},
+  }
 
 @article{FATES_CES,
    title={Inferring parameters in a complex land surface model by combining data assimilation and machine learning.}
