--- a/scripts/tutorials/gpWrapper.Rmd
+++ b/scripts/tutorials/gpWrapper.Rmd
@@ -66,8 +66,8 @@ func1 <- function(x) drop(2*cos(3*x) + 2*x)
 func2 <- function(x) drop(x^3 - 4*x)
 sd1 <- 1.0
 sd2 <- 1.4
-f1 <- func1(x)
-f2 <- func2(x)
+f1 <- func1(X)
+f2 <- func2(X)
 y1 <- f1 + sd1*rnorm(n)
 y2 <- f2 + sd2*rnorm(n)
 Y <- cbind(y1, y2)
